# nzlusdb

./: .gitignore  .nojekyll  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  comingsoon.html  environment.yml  index.html  method.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/: pull_request_template.md
.github/issue_templates/: 1-lu_request.yml  2-lu_modification.yml  3-feature_request.yml
.github/workflows/: publish-quarto.yml
docs/: _quarto.yml  index.md  landuses_registry.txt  method.md
docs/landuses/: _landuse.md  apple.md  avocado.md  blueberry.md  cherry.md  citrus.md  grapevines.md  hops.md  kiwifruit.md  landuse.md  maize.md  maizeearly.md  maizelate.md  manuka.md  pinotnoir.md  sauvignonblanc.md  wheat.md  wheatearly.md  wheatlate.md
landuses/: apple.html  avocado.html  blueberry.html  cherry.html  citrus.html  grapevines.html  hops.html  kiwifruit.html  landuse.html  maize.html  maizeearly.html  maizelate.html  manuka.html  pinotnoir.html  sauvignonblanc.html  wheat.html  wheatearly.html  wheatlate.html
site_libs/bootstrap/: bootstrap-0804ca7b3d81d07ca22172b74328ff84.min.css  bootstrap-4d046715530331da56d8c043a0da69dc.min.css  bootstrap-ee3848d5c8a1ca921490b0569213edae.min.css
src/nzlusdb/: __init__.py  landuses.py  utils.py
src/nzlusdb/core/: __init__.py  climdata.py  climdataset.py  database.py  indicators.py  indices.py  landuse.py  plot.py
src/nzlusdb/suitability/criteria/: __init__.py  apple.py  avocado.py  blueberry.py  cherry.py  citrus.py  hops.py  kiwifruit.py  maizeearly.py  maizelate.py  manuka.py  pinotnoir.py  sauvignonblanc.py  wheatearly.py  wheatlate.py
src/nzlusdb/suitability/indicators/: __init__.py  apple.py  avocado.py  blueberry.py  cherry.py  citrus.py  hops.py  kiwifruit.py  maizeearly.py  maizelate.py  manuka.py  pinotnoir.py  sauvignonblanc.py  wheatearly.py  wheatlate.py
