[project]
name = "nzlusdb"
authors = [
  { name="Baptiste Hamon", email="baptiste.hamon@pg.canterbury.ac.nz" },
]
maintainers = [
  { name="Baptiste Hamon", email="baptiste.hamon@pg.canterbury.ac.nz" },
]
readme = "README.rst"
keywords = ["NZLUSDB", "Land Use Suitability", "New Zeland", "Land Suitability Analysis", "Database"]
license = {file = "LICENSE"}
dynamic = ["description", "version"]
dependencies = [
  "lsapy >=0.2.0",
  "matplotlib >=3.9.0"
]

[project.optional-dependencies]
dev = [
  # dev tools
  "bump-my-version >=1.2.0",
  "pre-commit >=4.3.0",
  "ruff >=0.12.0",
]
docs = [
  # docs & examples
]
all = ["nzlsudb[dev]", "nzlusdb[docs]"]

[project.urls]
# Homepage = ""
Source = "https://github.com/baptistehamon/nzlusdb"
Issues = "https://github.com/baptistehamon/nzlusdb/issues"
# Zenodo = ""

[tool.bumpversion]
current_version = "0.0-dev0"
commit = true
commit_args = "--no-verify --signoff"
tag = false
allow_dirty = false
parse = "(?P<major>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+)((?P<build>\\d+)))?"
serialize = [
  "{major}.{patch}-{release}{build}",
  "{major}.{patch}"
]

[[tool.bumpversion.files]]
filename = "src/nzlusdb/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[tool.bumpversion.parts.build]
independent = false

[tool.bumpversion.parts.release]
optional_value = "release"
values = [
  "dev",
  "release"
]

[tool.ruff]
line-length = 120
output-format = "grouped"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
preview=true
select = [ # default values
  "B", # bugbear
  "C90", # McCabe complexity
  "D", # docstring
  "E", # pycodestyle errors
  "F", # pyflakes
  "I", # imports
  "N", # naming
  "PL", # pylint
  "S", # bandit
  "UP", # pyupgrade
  "W", # pycodestyle warnings
]
ignore = [
  "D400", # end-in-period
  "D401", # non-imperative-mood
  "PLR6201", # literal-membership
]

# [tool.ruff.lint.per-file-ignores]
# "docs/*.py" = []
# "src/nzlusdb/**/__init__.py" = []
# "tests/**/test*.py" = []

[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = ["nzlusdb"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 15
max-branches = 20
